--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>AT THE RIVER</title>
+        <title>THE WATER BETWEEN US</title>
         <!-- Angular and Angular-Route -->
         <script src="vendors/angular.min.js" charset="utf-8"></script>
         <script src="vendors/angular-route.min.js" charset="utf-8"></script>
@@ -27,31 +27,47 @@
        
         <div ng-controller="MaterialController as mc">
             
-            <header layout="row" layout-align="start center">
+            <!-- <header layout="row" layout-align="start center">
 
                     <h1>
-                        AT THE RIVER
+                        THE WATER BETWEEN US
                     </h1>
-            </header>
+            </header> -->
                 
             
             <div class="container">
                 
                 <div id="post1" class="post">
-                        <div id="firstp" layout="row" layout-align="space-around center" flex>
-                            <p>At The River traces, first person, the filmmaker's relationship with his family 
+                        <div id="header" layout="row" layout-align="space-around center" flex>
+                            
+                            
+                                <h1>
+                                    THE WATER BETWEEN US
+                                </h1>
+                            
+                            <!-- <p>At The River traces, first person, the filmmaker's relationship with his family 
                             following his niece's unexplained death and
                              his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans identity and religion,
                              Madsen Minax weaves the complexities and nuances of human connection, to create a relentless portrait of coping rural America.
-                             </p>
+                             </p> -->
                             </div>
                     <span class="scroll-down"></span>
                         
                 </div>
+                <md-content>
+                    <div id="firstp" layout="row" layout-align="space-around center" flex>
+                        <p>At The River traces, first person, the filmmaker's relationship with his family following his niece's unexplained death and
+                            his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans identity and religion,
+                            Madsen Minax weaves the complexities and nuances of human connection, to create a relentless portrait of coping rural
+                            America.
+                        </p>
+                    </div>
+                </md-content>
                 <div id="post2" class="post">
                     
                 </div>
                 <div id="post3" class="post">
+                    <!-- <md-content>
                     <div id="secondp" layout="row" layout-align="space-around center" flex>
                         <p><a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a BFA from the
                         School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has held numerous residencies
@@ -63,12 +79,34 @@
                         Film Forum, Denver Underground Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
                         </p>
                     </div>
+                    </md-content> -->
                 </div>
+                <md-content>
+                    <div id="secondp" layout="row" layout-align="space-around center" flex>
+                        <p>
+                            <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received
+                            a BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and
+                            has held numerous residencies and fellowships from the Core Program, the Skowhegan School of Painting and Sculpture,
+                            the Bemis Center for Contemporary Art, the Berlinale DOC Station, the Flaherty Film Seminar and others. Madsen's
+                            projects have screened and exhibited at venues including the Museum of Contemporary Art (Chicago), Anthology
+                            Film Archives (NYC), The British Film Institute (UK), the European Media Art Festival (Germany), the Ann Arbor
+                            Film Festival, Oufest, Newfest, and Frameline, earning jury awards from the Philadelphia Independent Film Festival,
+                            the Vermont International Film Festival, the New Jersey International Film Festival, Los Angeles Film Forum,
+                            Denver Underground Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
+                        </p>
+                    </div>
+                </md-content>
                 <div id="post4" class="post">
                     
                 </div>
                 <div id="post5" class="post">
-                    
+                    <!-- <div id="button" layout="row" layout-align="space-around center" flex ng-click="showDialog($event)">
+                        <a class="btn btn-large btn-gray" href="#">VIEW TRAILER</a>
+                    </div> -->
+                    <md-button class="md-primary md-raised" ng-click="mc.showDialog($event)" class="md-raised" aria-label="Open Dialog"
+                        id="more">
+                        VIEW TRAILER
+                    </md-button>
                 </div>
                 <div id="post6" class="post">
                     
@@ -122,12 +160,17 @@
                     
                 </div>
                 <footer>
-                     <span id="footer">This project is made possible in part by:<br>
-                         <img class="logo" src="/images/berlinale-talents-logo.png"/>
-                        <img class="logo" src="/images/LEFDetail.jpg"/>
-                        <br>
+                    <div id="footer" layout="column" layout-align="center center" flex>
+                     <div>This project is made possible in part by:</div>
+                        <div><img class="logo" src="/images/berlinale-talents-logo.png"/>
+                        <img class="logo" src="/images/LEFDetail.jpg"/></div>
+                        <div>
+                         The Water Between Us is a fiscally sponsored project of MIX NYC.<br>
+                        </div>
+                        <div>
                         Website made by <a href="http://www.jaharonov.com" target="_blank">Jaffa Aharonov</a>
-                     </span>
+                        </div>
+                    </div>
                 </footer>
             </div>
         </div>
