--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -29,6 +29,7 @@ body  {
 
 #post1 {
   background-image: url("/images/clouds.png");
+  
 }
 
 #post2 {
@@ -117,15 +118,15 @@ body  {
 .scroll-down {
 	position: absolute;
 	left: 50%;
-	bottom: 10px;
+	bottom: 50px;
 	display: block;
 	text-align: center;
-	font-size: 20px;
+	font-size: 40px;
 	z-index: 100;
 	text-decoration: none;
 	text-shadow: 0;
-  width: 13px;
-  height: 13px;
+  width: 25px;
+  height: 25px;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   z-index: 9;
@@ -156,16 +157,16 @@ body  {
   100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
 
-header {
-    background-color: black;
-    font-size: 48px;
-    height: 125px;
-    padding-left: 25px;
-}
 
 h1 {
     font-size: 80px;
     color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    
+    
 }
 
 p {
@@ -199,7 +200,7 @@ footer {
 }
 
 a  {
-    color: lightgray;
+    color: darkgray;
     text-decoration: none;
 }
 
