changed h1 to relative

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -29,7 +29,7 @@
             
     
                 <div id="post1" class="post">
-                        <div id="header" layout="column" layout-align="start center" flex>
+                        <div id="header" layout="row" layout-xs="column" layout-align="start center" flex>
                             
                             
                                 <h1>
