--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -161,7 +161,7 @@ body  {
 h1 {
     font-size: 80px;
     color: black;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
