changed footer title

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -163,7 +163,7 @@
                         <div><img class="logo" src="/images/berlinale-talents-logo.png"/>
                         <img class="logo" src="/images/LEFDetail.jpg"/></div>
                         <div>
-                         The Water Between Us is a fiscally sponsored project of MIX NYC.<br>
+                         At The Water is a fiscally sponsored project of MIX NYC.<br>
                         </div>
                         <div>
                         Website made by <a href="http://www.jaharonov.com" target="_blank">Jaffa Aharonov</a>
