--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -24,7 +24,9 @@ body  {
   background: 50% 50% / cover no-repeat;
   background-attachment: fixed;
   min-width: 100%;
+  max-width: 100%;
   min-height: 100%;
+  max-height: 100%;
 }
 
 #post1 {
