--- a/server/public/views/dialog.html
+++ b/server/public/views/dialog.html
@@ -1,10 +1,11 @@
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <md-dialog aria-label="video popup">
     <form ng-cloak>
        
 
         <md-dialog-content>
             <div class="md-dialog-content">
-            <iframe src="https://player.vimeo.com/video/4448877" width="640" height="432" frameborder="0" webkitallowfullscreen mozallowfullscreen
+            <iframe src="https://player.vimeo.com/video/4448877"  frameborder="0" webkitallowfullscreen mozallowfullscreen
                 allowfullscreen></iframe>
             <p>
                 <a href="https://vimeo.com/4448877">The Wreck Family</a> from
