--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <title>AT THE WATER</title>
         <!-- Angular and Angular-Route -->
         <script src="vendors/angular.min.js" charset="utf-8"></script>
