changed padding to em

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -18,8 +18,8 @@ body  {
 }
 
 .post {
-  padding-top: 250px;
-  padding-bottom: 250px;
+  padding-top: 21em;
+  padding-bottom: 21em;
   padding: 5em 0;
   background: 50% 50% / cover no-repeat;
   background-attachment: fixed;
