--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -187,6 +187,7 @@ h1 {
     top: 25%;
     left: 50%;
 }
+}
 p {
     font-size: 24px;
     padding-left: 50px;
@@ -261,5 +262,3 @@ a.btn,.btn {
 md-button {
   overflow-y: scroll;
 }
-
-
