new complete version

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-        <title>AT THE WATER</title>
+        <title>NORTH BY CURRENT, AN ADAPTION</title>
         <!-- Angular and Angular-Route -->
         <script src="vendors/angular.min.js" charset="utf-8"></script>
         <script src="vendors/angular-route.min.js" charset="utf-8"></script>
@@ -34,7 +34,7 @@
                             
                             
                                 <h1>
-                                    AT THE WATER
+                                    NORTH BY CURRENT, AN ADAPTION
                                 </h1>
                             
 
@@ -45,8 +45,8 @@
                     <!-- <span class="scroll-down"></span> -->
                         
                 
-                <md-content>
-                    <div id="firstp" layout="column" layout-align="space-around center" flex>
+                <!-- <md-content> -->
+                    <!-- <div id="firstp" layout="column" layout-align="space-around center" flex>
                         <div>
                             <p>At The River traces, first person, the filmmaker's relationship with his family following his niece's unexplained death and
                             his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans identity and religion,
@@ -60,12 +60,26 @@
                         VIEW TRAILER
                     </md-button>
                         </div>
-                    </div>
-                </md-content>
-                <div id="post2" class="post">
+                    </div> -->
+                <!-- </md-content> -->
+                <!-- <div id="post2" class="post">
                     
-                </div>
+                </div> -->
                 <div id="post3" class="post">
+                        <div id="firstp" layout="column" layout-align="space-around center" flex>
+                            <div>
+                                <p>At The River traces, first person, the filmmaker's relationship with his family following his niece's unexplained
+                                    death and his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans
+                                    identity and religion, Madsen Minax weaves the complexities and nuances of human connection, to create a relentless
+                                    portrait of coping rural America.
+                                </p>
+                            </div>
+                            <div>
+                                <md-button class="md-primary md-raised" ng-click="mc.showDialog($event)" aria-label="Open Dialog" id="more">
+                                    VIEW TRAILER
+                                </md-button>
+                            </div>
+                        </div>
                     <!-- <md-content>
                     <div id="secondp" layout="row" layout-align="space-around center" flex>
                         <p><a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a BFA from the
@@ -80,8 +94,8 @@
                     </div>
                     </md-content> -->
                 </div>
-                <md-content>
-                    <div id="secondp" layout="row" layout-align="space-around center" flex>
+                <!-- <md-content> -->
+                    <!-- <div id="secondp" layout="row" layout-align="space-around center" flex>
                         <p>
                             <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received
                             a BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and
@@ -93,12 +107,25 @@
                             the Vermont International Film Festival, the New Jersey International Film Festival, Los Angeles Film Forum,
                             Denver Underground Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
                         </p>
-                    </div>
-                </md-content>
-                <div id="post4" class="post">
+                    </div> -->
+                <!-- </md-content> -->
+                <!-- <div id="post4" class="post">
                     
-                </div>
+                </div> -->
                 <div id="post5" class="post">
+                    <div id="secondp" layout="row" layout-align="space-around center" flex>
+                        <p>
+                            <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a
+                            BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has
+                            held numerous residencies and fellowships from the Core Program, the Skowhegan School of Painting and Sculpture,
+                            the Bemis Center for Contemporary Art, the Berlinale DOC Station, the Flaherty Film Seminar and others. Madsen's
+                            projects have screened and exhibited at venues including the Museum of Contemporary Art (Chicago), Anthology Film
+                            Archives (NYC), The British Film Institute (UK), the European Media Art Festival (Germany), the Ann Arbor Film Festival,
+                            Oufest, Newfest, and Frameline, earning jury awards from the Philadelphia Independent Film Festival, the Vermont
+                            International Film Festival, the New Jersey International Film Festival, Los Angeles Film Forum, Denver Underground
+                            Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
+                        </p>
+                    </div>
                     <!-- <div id="button" layout="row" layout-align="space-around center" flex ng-click="showDialog($event)">
                         <a class="btn btn-large btn-gray" href="#">VIEW TRAILER</a>
                     </div> -->
@@ -107,24 +134,24 @@
                         VIEW TRAILER
                     </md-button> -->
                 </div>
-                <div id="post6" class="post">
+                <!-- <div id="post6" class="post">
                     
-                </div>
-                <div id="post7" class="post">
+                </div> -->
+                <!-- <div id="post7" class="post">
                     
-                </div>
+                </div> -->
                 <div id="post8" class="post">
                     
                 </div>
-                <div id="post9" class="post">
+                <!-- <div id="post9" class="post">
                     
-                </div>
+                </div> -->
                 <div id="post10" class="post">
                     
                 </div>
-                <div id="post11" class="post">
+                <!-- <div id="post11" class="post">
                     
-                </div>
+                </div> -->
                 <div id="post12" class="post">
                     
                 </div>
@@ -155,16 +182,17 @@
                 <div id="post21" class="post">
                     
                 </div>
-                <div id="post22" class="post">
+                <!-- <div id="post22" class="post">
                     
-                </div>
+                </div> -->
                 <footer>
                     <div id="footer" layout="column" layout-align="center center" flex>
                      <div>This project is made possible in part by:</div>
                         <div><img class="logo" src="/images/berlinale-talents-logo.png"/>
                         <img class="logo" src="/images/LEFDetail.jpg"/></div>
                         <div>
-                         At The Water is a fiscally sponsored project of MIX NYC.<br>
+                            
+                         North By Current, An Adaptation is a fiscally sponsored project of MIX NYC.<br>
                         </div>
                         <div>
                         Website made by <a href="http://www.jaharonov.com" target="_blank">Jaffa Aharonov</a>
