--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -8,11 +8,11 @@
 }
 body  {
   margin: 0;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica', sans-serif;
+  color: black;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 60px;
   text-align: center;
-  font-weight: 700;
+  font-weight: 500;
   background-color: black;
   background-size: 100%;
   
@@ -20,7 +20,7 @@ body  {
 @media (max-width: 767px) {
 .post {
 
-    background-attachment: scroll;
+    background-attachment: fixed;
 
 }
 }
@@ -30,124 +30,150 @@ body  {
   padding: 5em 0;
   background: 50% 50% / cover no-repeat;
   background-attachment: fixed;
-  min-width: 100%;
+  /* min-width: 100%;
   max-width: 100%;
   min-height: 100%;
-  max-height: 100%;
+  max-height: 100%; */
   /* background-size: 100%; */
+  background-size: cover;
   
 }
 
 #post1 {
   background-image: url("/images/clouds.png");
-  min-height: 150%;
+  /* min-height: 150%; */
+  background-size: auto;
+  
 }
 
 #post2 {
   background-image: url("/images/cows.png");
-  background-size: 100%;
+  
+  /* min-height: 150%; */
+
+  
 }
 
 #post3 {
   background-image: url("/images/curtain.png");
-  background-size: 100%;
+ font-size: 80px;
+  /* min-height: 150%; */
 }
 
 #post4 {
   background-image: url("/images/diner.png");
-  background-size: 100%;
+ font-size: 80px;
+  /* min-height: 150%; */
 }
 
 #post5 {
-  background-image: url("/images/flagwalk.png");
-  background-size: 100%;
+  background-image: url("/images/lumberstacks.png");
+font-size: 80px;
+  /* background-size: 100%; */
 }
 
 #post6 {
   background-image: url("/images/frameinframe.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post7 {
   background-image: url("/images/garage.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post8 {
   background-image: url("/images/gasstation.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post9 {
   background-image: url("/images/graves.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post10 {
   background-image: url("/images/hemlock.png");
-  background-size: 100%;
+  font-size: 80px;
+  /* background-size: 100%; */
 }
 
 #post11 {
   background-image: url("/images/interview.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post12 {
   background-image: url("/images/jesCU.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post13 {
   background-image: url("/images/lake.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post14 {
-  background-image: url("/images/lumberstacks.png");
-  background-size: 100%;
+  background-image: url("/images/flagwalk.png");
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post15 {
   background-image: url("/images/mill.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post16 {
   background-image: url("/images/muscle.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post17 {
   background-image: url("/images/piano.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post18 {
   background-image: url("/images/prayer.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post19 {
   background-image: url("/images/snowyroad.png");
-  background-size: 100%;
+  font-size: 80px;
+  /* background-size: 100%; */
 }
 
 #post20 {
   background-image: url("/images/trainsnow.png");
-  background-size: 100%;
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
 #post21 {
-  background-image: url("/images/water.png");
-  background-size: 100%;
+  background-image: url("/images/snowyroad.png");
+  /* background-size: 100%; */
+  font-size: 80px;
 }
 
-#post22 {
+/* #post22 {
   background-image: url("/images/woods2.png");
-  background-size: 100%;
-}
+  /* background-size: 100%; */
+/* }  */
 .scroll-down {
+  
 	position: relative;
 	left: 50%;
 	bottom: 50px;
@@ -192,10 +218,10 @@ body  {
 
 h1 {
     padding-top: -0.03em;
-    font-size: 2em;
+    font-size: 1.2em;
     color: black;
     position: relative;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     
@@ -210,12 +236,12 @@ h1 {
 }
 }
 p {
-    font-size: 24px;
+    font-size: 20px;
     padding-left: 50px;
     padding-right: 50px;
     text-align: justify;
     text-justify: distribute;
-    opacity: 0.7;
+    /* opacity: 0.7; */
     
     
 
@@ -225,6 +251,7 @@ footer {
     padding-top: 40px;
     height: 225px;
     background-color: black;
+    color: white;
    
     
 }
@@ -282,4 +309,5 @@ a.btn,.btn {
 
 md-button {
   overflow-y: scroll;
+  
 }
