--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -68,7 +68,7 @@
                 <div id="post3" class="post">
                         <div id="firstp" layout="column" layout-align="space-around center" flex>
                             <div>
-                                <p>At The River traces, first person, the filmmaker's relationship with his family following his niece's unexplained
+                                <p>North By Current, An Adaption traces, first person, the filmmaker's relationship with his family following his niece's unexplained
                                     death and his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans
                                     identity and religion, Madsen Minax weaves the complexities and nuances of human connection, to create a relentless
                                     portrait of coping rural America.
