--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -14,7 +14,7 @@ body  {
   text-align: center;
   font-weight: 500;
   background-color: black;
-  background-size: 100%;
+  height: 100%;
   
 }
 @media (max-width: 767px) {
@@ -28,7 +28,7 @@ body  {
   padding-top: 21em;
   padding-bottom: 21em;
   padding: 5em 0;
-  background: 50% 50% / cover no-repeat;
+  /* background: 50% 50% / cover no-repeat; */
   background-attachment: fixed;
   /* min-width: 100%;
   max-width: 100%;
@@ -37,6 +37,9 @@ body  {
   /* background-size: 100%; */
   /* background-size: cover; */
   background-size: 100% auto;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   
 }
 
