--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -36,7 +36,7 @@ body  {
   max-height: 100%; */
   /* background-size: 100%; */
   /* background-size: cover; */
-  background-size: 100% auto;
+  background-size: cover;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
