--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -36,11 +36,12 @@
                                 <h1>
                                     NORTH BY CURRENT, AN ADAPTION
                                 </h1>
-                            
+                                
 
                             
                         </div>
                     <span class="scroll-down"></span>
+                    <div id="getbig"></div>
                 </div>
                     <!-- <span class="scroll-down"></span> -->
                         
