--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -30,7 +30,8 @@
             
     
                 <div id="post1" class="post">
-                        <div id="header" layout="row" layout-xs="column" layout-align="start center" flex>
+                    
+                        <header layout="row" layout-xs="column" layout-align="start center" flex>
                             
                             
                                 <h1>
@@ -39,9 +40,12 @@
                                 
 
                             
-                        </div>
+                        </header>
+                        <br/>
+                        
+                        
                     <span class="scroll-down"></span>
-                    <div id="getbig"></div>
+                    <div id="big"></div>
                 </div>
                     <!-- <span class="scroll-down"></span> -->
                         
@@ -66,9 +70,15 @@
                 <!-- <div id="post2" class="post">
                     
                 </div> -->
-                <div id="post3" class="post">
-                        <div id="firstp" layout="column" layout-align="space-around center" flex>
+                
+                        <div id="post3" class="post" id="firstp" layout="column" layout-align="space-around center" flex>
                             <div>
+                                <br/>
+                                <br/>
+                                <br/>
+                                <br/>
+                                <br/>
+                                <br/>
                                 <p>North By Current, An Adaption traces, first person, the filmmaker's relationship with his family following his niece's unexplained
                                     death and his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans
                                     identity and religion, Madsen Minax weaves the complexities and nuances of human connection, to create a relentless
@@ -81,6 +91,7 @@
                                 </md-button>
                             </div>
                         </div>
+                        
                     <!-- <md-content>
                     <div id="secondp" layout="row" layout-align="space-around center" flex>
                         <p><a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a BFA from the
@@ -113,8 +124,8 @@
                 <!-- <div id="post4" class="post">
                     
                 </div> -->
-                <div id="post5" class="post">
-                    <div id="secondp" layout="row" layout-align="space-around center" flex>
+                
+                    <div id="post5" class="post" layout="row" layout-align="center start" flex>
                         <p>
                             <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a
                             BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has
@@ -134,7 +145,7 @@
                         id="more">
                         VIEW TRAILER
                     </md-button> -->
-                </div>
+                
                 <!-- <div id="post6" class="post">
                     
                 </div> -->
@@ -174,18 +185,14 @@
                 <div id="post18" class="post">
                     
                 </div>
-                <div id="post19" class="post">
-                    
-                </div>
+                
                 <div id="post20" class="post">
                     
                 </div>
                 <div id="post21" class="post">
                     
                 </div>
-                <!-- <div id="post22" class="post">
-                    
-                </div> -->
+                
                 <footer>
                     <div id="footer" layout="column" layout-align="center center" flex>
                      <div>This project is made possible in part by:</div>
