changed sizing on clouds

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -157,7 +157,7 @@ md-button {
   background-image: url("/images/clouds.png");
   /* min-height: 150%; */
   /* background-size: auto; */
-  /* font-size: 120px; */
+  font-size: 60px;
   
 }
 
